add margin and padding utility classes

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,5 +1,8 @@
-:root {
-  --color-primary: #a12347;
-  --color-secondary: #263454;
-  --color-tertiary: #d9dbf1;
-}
+// Colors
+$color-primary: #a12347;
+$color-secondary: #263454;
+$color-tertiary: #d9dbf1;
+
+// SCSS Variables
+// The spacing ratio for padding and margin util classes
+$default-spacing: 8rem;
